fix(ui): Fix updater changelog link contrast when using dark mode

--- a/frontend/src/valetudo/Updater.module.css
+++ b/frontend/src/valetudo/Updater.module.css
@@ -3,3 +3,7 @@
 .reactMarkDown img {
     max-width: 100%;
 }
+
+.reactMarkDown a {
+    color: inherit;
+}
